fix letter spacing and add max width to grid columns

--- a/src/styles/_gridSystem.scss
+++ b/src/styles/_gridSystem.scss
@@ -6,6 +6,7 @@
   $gutters: calc(#{$gutter} * #{$columnDifference} / #{$maxColumns});
   $columnsDividedColumnNumber: calc(#{$maxColumns} / #{$columnNumber});
   width: calc((100% / #{$columnsDividedColumnNumber}) - #{$gutters});
+  max-width: 100%;
 }
 
 @mixin rowBasics($maxWidth) {
